--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-date-picker": "^11.0.0",
     "react-day-picker": "^9.5.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4",
     "zustand": "^5.0.3"
